--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -22,46 +22,6 @@
         android:background="@drawable/top_shadow_gradient"
         app:layout_anchor="@id/bottom_sheet" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/route_progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:background="@drawable/stretched_circle"
-        android:backgroundTint="?backgroundViewColor"
-        android:elevation="6dp"
-        android:padding="4dp"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
-        android:stateListAnimator="@animator/loading_show"
-        android:visibility="gone"
-        app:layout_anchor="@id/header"
-        app:layout_anchorGravity="center|bottom">
-
-        <ProgressBar
-            android:id="@+id/progressBar4"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:indeterminateTint="?android:textColor"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/textView44"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="@string/loading"
-            android:textAllCaps="false"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/progressBar4"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
     <FrameLayout
         android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
@@ -89,20 +49,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageButton
-                android:id="@+id/route_opposite_btn"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:background="?selectableItemBackgroundBorderless"
-                android:elevation="2dp"
-                android:tint="?android:textColor"
-                app:layout_constraintBottom_toTopOf="@+id/station_tab_layout"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_swap_vert_black_24dp" />
-
             <ImageView
                 android:id="@+id/back"
                 android:layout_width="40dp"
@@ -124,26 +70,31 @@
                 android:layout_marginStart="8dp"
                 app:layout_constraintBottom_toBottomOf="@+id/route_name"
                 app:layout_constraintStart_toEndOf="@+id/back"
-                app:layout_constraintTop_toTopOf="@+id/route_name"
-                app:layout_constraintVertical_bias="0.1" />
+                app:layout_constraintTop_toTopOf="@+id/route_name" />
 
             <TextView
                 android:id="@+id/route_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="18dp"
                 android:layout_marginEnd="12dp"
                 android:layout_marginBottom="18dp"
-                android:text="BANANA"
+                android:backgroundTint="?android:textColor"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/route_opposite_btn"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/route_circle"
                 app:layout_constraintTop_toTopOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
+
+    <com.VegaSolutions.lpptransit.ui.errorhandlers.TopMessage
+        android:id="@+id/loading_msg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="120dp" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
