--- a/app/src/main/res/layout/template_departure_hour.xml
+++ b/app/src/main/res/layout/template_departure_hour.xml
@@ -4,59 +4,68 @@
     android:id="@+id/departure_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="12dp"
-    android:layout_marginTop="2dp"
-    android:layout_marginEnd="12dp"
-    android:layout_marginBottom="2dp"
     android:padding="2dp"
     app:cardBackgroundColor="?backgroundViewColor"
-    app:cardCornerRadius="12dp"
+    app:cardCornerRadius="0dp"
     app:cardElevation="?elevation">
 
     <LinearLayout
-        android:id="@+id/departure_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="?containerBorderMargin"
-        android:layout_marginStart="8dp"
-        android:elevation="?elevation"
-        android:orientation="horizontal"
-        android:padding="8dp"
-        android:paddingStart="8dp"
-        android:paddingEnd="16dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="?containerBorderPaddingSide"
-            android:layout_marginTop="?containerBorderPadding"
-            android:layout_marginEnd="?containerBorderPaddingSide"
-            android:layout_marginBottom="?containerBorderPadding"
-            android:background="@drawable/stretched_circle_container"
-            android:padding="2dp">
-
-            <TextView
-                android:id="@+id/departure_hour_hour"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/circle"
-                android:backgroundTint="@color/light_gray"
-                android:gravity="center"
-                android:padding="4dp"
-                android:text="15"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textSize="18sp" />
-        </FrameLayout>
-
-        <com.google.android.flexbox.FlexboxLayout
-            android:id="@+id/departure_hour_minutes"
+        <LinearLayout
+            android:id="@+id/departure_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="start|center_vertical"
-            android:layout_marginStart="8dp"
-            app:alignItems="flex_start"
-            app:flexWrap="wrap" />
+            android:layout_margin="?containerBorderMargin"
+            android:layout_marginStart="16dp"
+            android:elevation="?elevation"
+            android:orientation="horizontal"
+            android:padding="8dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="?containerBorderPaddingSide"
+                android:layout_marginTop="?containerBorderPadding"
+                android:layout_marginEnd="?containerBorderPaddingSide"
+                android:layout_marginBottom="?containerBorderPadding"
+                android:background="@drawable/stretched_circle_container"
+                android:padding="2dp">
+
+                <TextView
+                    android:id="@+id/departure_hour_hour"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/circle"
+                    android:backgroundTint="@color/light_gray"
+                    android:gravity="center"
+                    android:padding="4dp"
+                    android:text="15"
+                    android:textAlignment="center"
+                    android:textAllCaps="false"
+                    android:textSize="18sp" />
+            </FrameLayout>
+
+            <com.google.android.flexbox.FlexboxLayout
+                android:id="@+id/departure_hour_minutes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center_vertical"
+                android:layout_marginStart="8dp"
+                app:alignItems="flex_start"
+                app:flexWrap="wrap" />
+
+        </LinearLayout>
+
+        <View
+            android:id="@+id/view2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?dividerColor" />
 
     </LinearLayout>
 
