--- a/app/src/main/res/layout/activity_station.xml
+++ b/app/src/main/res/layout/activity_station.xml
@@ -26,7 +26,9 @@
         android:background="@android:color/white"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
         app:behavior_hideable="false"
-        app:behavior_peekHeight="100dp" >
+        app:behavior_peekHeight="100dp"
+        android:clickable="true"
+        android:focusable="true">
 
 
         <androidx.viewpager.widget.ViewPager
@@ -156,6 +158,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:tabIndicatorColor="@color/colorAccent"
+                    app:tabRippleColor="@color/colorRipple"
                     app:tabTextColor="?android:textColor" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </FrameLayout>
