--- a/app/src/main/res/layout/template_forum_post.xml
+++ b/app/src/main/res/layout/template_forum_post.xml
@@ -11,7 +11,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp">
+        android:paddingStart="16dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="16dp">
 
         <TextView
             android:id="@+id/user_tag"
@@ -100,15 +102,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:layout_marginBottom="16dp"
             android:background="@drawable/like_container"
             android:padding="3dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/view4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/post_tags">
 
             <ImageView
-                android:id="@+id/imageView4"
+                android:id="@+id/post_like_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:tint="?android:textColor"
@@ -123,10 +127,19 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:text="68"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-                app:layout_constraintEnd_toStartOf="@+id/imageView4"
-                app:layout_constraintTop_toTopOf="@+id/imageView4" />
+                app:layout_constraintBottom_toBottomOf="@+id/post_like_image"
+                app:layout_constraintEnd_toStartOf="@+id/post_like_image"
+                app:layout_constraintTop_toTopOf="@+id/post_like_image" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <View
+            android:id="@+id/view4"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:background="?dividerColor"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
