--- a/app/src/main/res/layout/template_loading_msg.xml
+++ b/app/src/main/res/layout/template_loading_msg.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/stretched_circle"
         android:backgroundTint="?backgroundViewColor"
         android:elevation="2dp"
@@ -20,6 +21,7 @@
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
