--- a/app/src/main/res/layout/template_tag_add.xml
+++ b/app/src/main/res/layout/template_tag_add.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/tag_background"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginEnd="8dp"
+    android:layout_marginBottom="4dp"
     android:background="@drawable/stretched_circle"
     android:padding="4dp"
     android:paddingStart="12dp"
@@ -20,10 +23,10 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="8dp"
-        android:tint="@android:color/white"
-        app:srcCompat="@drawable/ic_close_black_24dp"
+        android:background="?selectableItemBackgroundBorderless"
         android:clickable="true"
         android:focusable="true"
-        android:background="?selectableItemBackgroundBorderless"/>
+        android:tint="@android:color/white"
+        app:srcCompat="@drawable/ic_close_black_24dp" />
 
 </LinearLayout>
